// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`useDatabaseRecordSubscription hook > handle null record ID 1`] = `
[
  {
    "data": null,
    "error": null,
    "loading": true,
    "refetch": [Function],
    "setData": [Function],
  },
  {
    "data": null,
    "error": null,
    "loading": false,
    "refetch": [Function],
    "setData": [Function],
  },
]
`;

exports[`useDatabaseRecordSubscription hook > manually call refetch once 1`] = `
[
  {
    "data": null,
    "error": null,
    "loading": true,
    "refetch": [Function],
    "setData": [Function],
  },
  {
    "data": {
      "createdAt": 1748749986025,
      "id": "settings::default",
      "lastPage": "/",
      "theme": "",
      "updatedAt": 1748749986025,
    },
    "error": null,
    "loading": false,
    "refetch": [Function],
    "setData": [Function],
  },
  {
    "data": {
      "createdAt": 1748749986025,
      "id": "settings::default",
      "lastPage": "/",
      "theme": "",
      "updatedAt": 1748749986025,
    },
    "error": null,
    "loading": false,
    "refetch": [Function],
    "setData": [Function],
  },
  {
    "data": {
      "createdAt": 1748749986025,
      "id": "settings::default",
      "lastPage": "/",
      "theme": "",
      "updatedAt": 1748749986025,
    },
    "error": null,
    "loading": false,
    "refetch": [Function],
    "setData": [Function],
  },
  {
    "data": {
      "createdAt": 1748749986025,
      "id": "settings::default",
      "lastPage": "/",
      "theme": "",
      "updatedAt": 1748749986025,
    },
    "error": null,
    "loading": true,
    "refetch": [Function],
    "setData": [Function],
  },
  {
    "data": {
      "createdAt": 1748749986025,
      "id": "settings::default",
      "lastPage": "/",
      "theme": "",
      "updatedAt": 1748749986025,
    },
    "error": null,
    "loading": false,
    "refetch": [Function],
    "setData": [Function],
  },
]
`;

exports[`useDatabaseRecordSubscription hook > manually call setData 1`] = `
[
  {
    "data": null,
    "error": null,
    "loading": true,
    "refetch": [Function],
    "setData": [Function],
  },
  {
    "data": {
      "createdAt": 1748749986287,
      "id": "settings::default",
      "lastPage": "/",
      "theme": "",
      "updatedAt": 1748749986287,
    },
    "error": null,
    "loading": false,
    "refetch": [Function],
    "setData": [Function],
  },
  {
    "data": {
      "createdAt": 1748749986287,
      "id": "settings::default",
      "lastPage": "/",
      "theme": "",
      "updatedAt": 1748749986287,
    },
    "error": null,
    "loading": false,
    "refetch": [Function],
    "setData": [Function],
  },
  {
    "data": {
      "createdAt": 1748749986287,
      "id": "settings::default",
      "lastPage": "/",
      "theme": "",
      "updatedAt": 1748749986287,
    },
    "error": null,
    "loading": false,
    "refetch": [Function],
    "setData": [Function],
  },
  {
    "data": {
      "createdAt": 1748749986289,
      "id": "settings::default",
      "lastPage": "/manual",
      "theme": "manually-set-theme",
      "updatedAt": 1748749986289,
    },
    "error": null,
    "loading": false,
    "refetch": [Function],
    "setData": [Function],
  },
]
`;

exports[`useDatabaseRecordSubscription hook > record ID changes from null to valid 1`] = `
[
  {
    "data": null,
    "error": null,
    "loading": true,
    "refetch": [Function],
    "setData": [Function],
  },
  {
    "data": null,
    "error": null,
    "loading": false,
    "refetch": [Function],
    "setData": [Function],
  },
  {
    "data": null,
    "error": null,
    "loading": false,
    "refetch": [Function],
    "setData": [Function],
  },
  {
    "data": null,
    "error": null,
    "loading": true,
    "refetch": [Function],
    "setData": [Function],
  },
  {
    "data": {
      "createdAt": 1748749985225,
      "id": "settings::default",
      "lastPage": "/",
      "theme": "",
      "updatedAt": 1748749985225,
    },
    "error": null,
    "loading": false,
    "refetch": [Function],
    "setData": [Function],
  },
  {
    "data": {
      "createdAt": 1748749985225,
      "id": "settings::default",
      "lastPage": "/",
      "theme": "",
      "updatedAt": 1748749985225,
    },
    "error": null,
    "loading": false,
    "refetch": [Function],
    "setData": [Function],
  },
]
`;

exports[`useDatabaseRecordSubscription hook > record ID changes from valid to null 1`] = `
[
  {
    "data": null,
    "error": null,
    "loading": true,
    "refetch": [Function],
    "setData": [Function],
  },
  {
    "data": {
      "createdAt": 1748749985492,
      "id": "settings::default",
      "lastPage": "/",
      "theme": "",
      "updatedAt": 1748749985492,
    },
    "error": null,
    "loading": false,
    "refetch": [Function],
    "setData": [Function],
  },
  {
    "data": {
      "createdAt": 1748749985492,
      "id": "settings::default",
      "lastPage": "/",
      "theme": "",
      "updatedAt": 1748749985492,
    },
    "error": null,
    "loading": false,
    "refetch": [Function],
    "setData": [Function],
  },
  {
    "data": {
      "createdAt": 1748749985492,
      "id": "settings::default",
      "lastPage": "/",
      "theme": "",
      "updatedAt": 1748749985492,
    },
    "error": null,
    "loading": true,
    "refetch": [Function],
    "setData": [Function],
  },
  {
    "data": {
      "createdAt": 1748749985492,
      "id": "settings::default",
      "lastPage": "/",
      "theme": "",
      "updatedAt": 1748749985492,
    },
    "error": null,
    "loading": false,
    "refetch": [Function],
    "setData": [Function],
  },
]
`;

exports[`useDatabaseRecordSubscription hook > subscribe to existing record with known ID 1`] = `
[
  {
    "data": null,
    "error": null,
    "loading": true,
    "refetch": [Function],
    "setData": [Function],
  },
  {
    "data": {
      "createdAt": 1748749984383,
      "id": "settings::default",
      "lastPage": "/",
      "theme": "",
      "updatedAt": 1748749984383,
    },
    "error": null,
    "loading": false,
    "refetch": [Function],
    "setData": [Function],
  },
  {
    "data": {
      "createdAt": 1748749984383,
      "id": "settings::default",
      "lastPage": "/",
      "theme": "",
      "updatedAt": 1748749984383,
    },
    "error": null,
    "loading": false,
    "refetch": [Function],
    "setData": [Function],
  },
]
`;

exports[`useDatabaseRecordSubscription hook > subscribe to non-existent record 1`] = `
[
  {
    "data": null,
    "error": null,
    "loading": true,
    "refetch": [Function],
    "setData": [Function],
  },
  {
    "data": null,
    "error": [Error: Record with id settings::nonexistent not found in table settings],
    "loading": false,
    "refetch": [Function],
    "setData": [Function],
  },
]
`;

exports[`useDatabaseRecordSubscription hook > subscription with dependencies that change 1`] = `
[
  {
    "data": null,
    "error": null,
    "loading": true,
    "refetch": [Function],
    "setData": [Function],
  },
  {
    "data": {
      "createdAt": 1748749985762,
      "id": "settings::default",
      "lastPage": "/",
      "theme": "",
      "updatedAt": 1748749985762,
    },
    "error": null,
    "loading": false,
    "refetch": [Function],
    "setData": [Function],
  },
  {
    "data": {
      "createdAt": 1748749985762,
      "id": "settings::default",
      "lastPage": "/",
      "theme": "",
      "updatedAt": 1748749985762,
    },
    "error": null,
    "loading": false,
    "refetch": [Function],
    "setData": [Function],
  },
  {
    "data": {
      "createdAt": 1748749985762,
      "id": "settings::default",
      "lastPage": "/",
      "theme": "",
      "updatedAt": 1748749985762,
    },
    "error": null,
    "loading": true,
    "refetch": [Function],
    "setData": [Function],
  },
  {
    "data": {
      "createdAt": 1748749985762,
      "id": "settings::default",
      "lastPage": "/",
      "theme": "",
      "updatedAt": 1748749985762,
    },
    "error": null,
    "loading": true,
    "refetch": [Function],
    "setData": [Function],
  },
  {
    "data": {
      "createdAt": 1748749985762,
      "id": "settings::default",
      "lastPage": "/",
      "theme": "",
      "updatedAt": 1748749985762,
    },
    "error": null,
    "loading": false,
    "refetch": [Function],
    "setData": [Function],
  },
]
`;
